llvm-toolchain-snapshot (1:3.9~svn273256-1~exp1) UNRELEASED; urgency=medium

  * cmake files moved from usr/lib/llvm-3.9/share/llvm/cmake/
    to usr/lib/llvm-3.9/lib/cmake/llvm/
    (upstream change)
  * Disable the run of lldb testsuite because of LLVM_LINK_LLVM_DYLIB=ON:
     https://llvm.org/bugs/show_bug.cgi?id=28127

  [ YunQiang Su ]
  * Enable FPXX by default on mips/mipsel (Closes: #826749)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 21 Jun 2016 11:25:02 +0200

llvm-toolchain-snapshot (1:3.9~svn272513-1) unstable; urgency=medium

  * Remove the autoconf section
  * Bring back the removal of the build dir
  * Fix the coverage builds (didn't allow several cflags)
  * Set the correct conflicts on python-lldb-3.8 (Closes: #817873)
  * Set the correct conflicts on python-clang-3.8 (Closes: #817872)
  * remove llvm26003-sanitizer-check-env.diff (merged upstream)
  * Do not fail the build if the manpages cannot be built (failing on
    Ubuntu precise)
  * Install libfindAllSymbols.a as part of libclang-X.Y-dev
  * Ship scan-build-py
  * Use the libjsoncpp library embedded (fails to link otherwise)
  * Standards-Version 3.9.8

  [ Pablo Oliveira ]
  * Add python-six as a dependency of python-lldb (Closes: #825371)
    (thanks to Askar Safin)
  * Fix lldb symlinks
  * Fix missing _lldb.so import during lldb testsuite

  [ Ed Schouten ]
  * Preparation of the support of lld (not ready yet)

  [ Kai Wasserbäch ]
    * debian/rules:
      - Ensure ld-gold is used. CMake invokes the linker through g++ most of the
        time, therefore we need to set -Wl,-fuse-ld=gold.
      - Remove unused variable "confargs".

  [ Brad King ]
  * Install cmake files in usr/share/llvm-@LLVM_VERSION@/cmake/ instead of
    usr/share/llvm-@LLVM_VERSION@/cmake/
  * Also install libLLVM-3.8.so.1 as a symlink
  * debian/patches/fix-cmake-config-prefix.diff:
    cover the CMake build system too
  (Closes: #819072)

  [ Alexis La Goutte ]