@@ -3,6 +3,8 @@ llvm-toolchain-snapshot (1:3.9~svn273256-1~exp1) UNRELEASED; urgency=medium
   * cmake files moved from usr/lib/llvm-3.9/share/llvm/cmake/
     to usr/lib/llvm-3.9/lib/cmake/llvm/
     (upstream change)
+  * Add a symlink from usr/lib/llvm-3.8/share/llvm/cmake
+    pointing to usr/share/llvm-3.8/cmake
   * Disable the run of lldb testsuite because of LLVM_LINK_LLVM_DYLIB=ON:
      https://llvm.org/bugs/show_bug.cgi?id=28127
 
